Added docker ps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
+
       - name: Set up SSH key and deploy
         run: |
           echo "$PRIVATE_KEY" > private_key
@@ -24,8 +24,9 @@ jobs:
             # cd /path/to/your/application
             # git pull origin main
             # ./deploy.sh
+            docker ps
           EOF
         env:
           PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          HOSTNAME: ${{ secrets.HOST_NAME }}
+          HOSTNAME: ${{ secrets.HOSTNAME }}
           USER_NAME: ${{ secrets.USER_NAME }}
