--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           echo "$PRIVATE_KEY" > private_key
           chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key $USER_NAME@$HOSTNAME << EOF
-            cd /Klockan-Keycloak
+            cd /home/ubuntu/Klockan-App
             docker-compose pull
             docker-compose up -d
           EOF
